<resources>
    <string name="app_name">mylock</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="registrarse">Registrarse</string>
    <string name="ingresar_sesi_n">Ingresar Sesión</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="add_telefono">Agregar teléfono</string>
    <string name="apellidos">Apellidos</string>
    <string name="telefono">Telefono</string>
    <string name="nombre">Nombre</string>
    <string name="agregar">Agregar</string>
    <string name="delete">delete</string>
    <string name="edit">edit</string>
    <string name="cerrar_sesi_n">Cerrar sesión</string>
    <string name="contactos">Contactos</string>
    <string name="l_mpara">Lámpara</string>
</resources>